# Aqukinn

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
src/commands/: meta.rs  mod.rs  music.rs
src/hooks/: mod.rs
