[package]
name = "Aqukinn"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
songbird = "0.2.0"
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.4"

[dependencies.tokio]
version = "1.15.0"
features = [
    "macros",
    "rt-multi-thread",
    "signal"
]

[dependencies.serenity]
version = "0.10.9"
features = ["framework", "client", "voice", "cache"]

[dependencies.lavalink-rs]
version = "0.9.0-rc"
features = [
    "rustls",
    "songbird",
    "serenity",
    "tracing-log"
]

#[dependencies.poise]
#git = "https://github.com/kangalioo/poise"
#branch = "master"
