[package]
name = "Aqukinn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.14.0"
twilight-gateway = "0.14.0"
twilight-http = "0.14.0"
twilight-model = "0.14.0"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
dotenv = "0.15.0"
anyhow = "1.0.66"
